--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Accordeon avec HTML CSS JAVASCRIPT">
   <title>Foires aux questions</title>
+  
+  <!-- favicon -->
+  <!-- Couvre tous les navigateurs qui prennent en charge ".ico" -->
+  <link rel="shortcut icon" href="/favicon-48x48.ico">
+  <!-- Couvre tous les navigateurs modernes -->
+  <link rel="icon" type="image/png" href="/favicon-196x196.png">
+  <!-- iOS & autres appareils mobiles -->
+  <link rel="apple-touch-icon" href="favicon-touch-icon-iphone-180x180.png">
+
   <!-- Font awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
+
   <!-- CSS file -->
   <link rel="stylesheet" href="style.css">
 </head>
