--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Accordeon avec HTML CSS JAVASCRIPT">
   <title>Foires aux questions</title>
-  
+
   <!-- favicon -->
   <!-- Couvre tous les navigateurs qui prennent en charge ".ico" -->
   <link rel="shortcut icon" href="/favicon-48x48.ico">
@@ -17,128 +17,137 @@
   <link rel="apple-touch-icon" href="favicon-touch-icon-iphone-180x180.png">
 
   <!-- Font awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
 
   <!-- CSS file -->
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section class="container-question">
-      <h1>Foires aux Questions</h1>
+  <section class="container-question">
+    <h1>Foires aux Questions</h1>
 
-      <!-- ======== Question 1 ======== -->
-      <article class="question">
-        <div class="question-title">
-          <h2>sur quel site internet, puis-je effectuer ma déclaration?</h2>
-          <button type="button" class="question-btn">
-            <span class="plus-icon">
-              <i class="far fa-plus-square"></i>
-            </span>
-            <span class="minus-icon">
-              <i class="far fa-minus-square"></i>
-            </span>
-          </button>
-        </div>
-        <div class="question-text">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-            dolore illo dolores quia nemo doloribus quaerat, magni numquam
-            repellat reprehenderit.
-          </p>
-        </div>
-      </article><!-- End question 1 -->
+    <!-- ======== Question 1 ======== -->
+    <article class="question">
+      <div class="question-title">
+        <h2>sur quel site internet, puis-je effectuer ma déclaration?</h2>
+        <button type="button" class="question-btn">
+          <span class="plus-icon">
+            <i class="far fa-plus-square"></i>
+          </span>
+          <span class="minus-icon">
+            <i class="far fa-minus-square"></i>
+          </span>
+        </button>
+      </div>
+      <div class="question-text">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, ipsam quo delectus at quia, maiores ipsum
+          id eligendi iste aspernatur deserunt unde odio? Officia delectus nulla quisquam voluptatem optio. Voluptatum!
+          Harum tempora voluptatum adipisci labore, quis iusto, impedit recusandae illum eos odit itaque maxime fugiat
+          animi culpa, doloribus quam libero omnis consequatur temporibus placeat blanditiis. Voluptatibus nam saepe
+          nihil consequatur!
+        </p>
+      </div>
+    </article><!-- End question 1 -->
 
-      <!-- ======== Question 2 ======== -->
-      <article class="question">
-        <div class="question-title">
-          <h2>qui sont les employeurs publics concernés?</h2>
-          <button type="button" class="question-btn">
-            <span class="plus-icon">
-              <i class="far fa-plus-square"></i>
-            </span>
-            <span class="minus-icon">
-              <i class="far fa-minus-square"></i>
-            </span>
-          </button>
-        </div>
-        <div class="question-text">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-            dolore illo dolores quia nemo doloribus quaerat, magni numquam
-            repellat reprehenderit.
-          </p>
-        </div>
-      </article><!-- End question 2 -->
+    <!-- ======== Question 2 ======== -->
+    <article class="question">
+      <div class="question-title">
+        <h2>qui sont les employeurs publics concernés?</h2>
+        <button type="button" class="question-btn">
+          <span class="plus-icon">
+            <i class="far fa-plus-square"></i>
+          </span>
+          <span class="minus-icon">
+            <i class="far fa-minus-square"></i>
+          </span>
+        </button>
+      </div>
+      <div class="question-text">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore omnis unde in quidem tempora maiores totam
+          ducimus ipsam eveniet quaerat! Quasi facere quia labore quis deleniti? Numquam quasi debitis non?
+          Et doloribus, veritatis soluta praesentium, nemo quisquam nulla obcaecati incidunt laudantium modi ad minima
+          ducimus architecto dolorem laborum ea aperiam, rem ipsum iure sit. Impedit voluptas labore rem modi nulla!
+        </p>
+      </div>
+    </article><!-- End question 2 -->
 
-      <!-- ======== Question 3 ======== -->
-      <article class="question">
-        <div class="question-title">
-          <h2>qui apprécie la validité des dépenses déductibles?</h2>
-          <button type="button" class="question-btn">
-            <span class="plus-icon">
-              <i class="far fa-plus-square"></i>
-            </span>
-            <span class="minus-icon">
-              <i class="far fa-minus-square"></i>
-            </span>
-          </button>
-        </div>
-        <div class="question-text">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-            dolore illo dolores quia nemo doloribus quaerat, magni numquam
-            repellat reprehenderit.
-          </p>
-        </div>
-      </article><!-- End question 3 -->
+    <!-- ======== Question 3 ======== -->
+    <article class="question">
+      <div class="question-title">
+        <h2>qui apprécie la validité des dépenses déductibles?</h2>
+        <button type="button" class="question-btn">
+          <span class="plus-icon">
+            <i class="far fa-plus-square"></i>
+          </span>
+          <span class="minus-icon">
+            <i class="far fa-minus-square"></i>
+          </span>
+        </button>
+      </div>
+      <div class="question-text">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+          dolore illo dolores quia nemo doloribus quaerat, magni numquam
+          repellat reprehenderit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste pariatur dignissimos,
+          itaque quasi sequi ex optio molestias laboriosam ipsum, nobis odit repellendus sunt cum natus accusamus
+          doloremque. Aperiam, repellendus expedita?
+        </p>
+      </div>
+    </article><!-- End question 3 -->
 
-      <!-- ======== Question 4 ======== -->
-      <article class="question">
-        <div class="question-title">
-          <h2>quels justificatifs dois-je produire?</h2>
-          <button type="button" class="question-btn">
-            <span class="plus-icon">
-              <i class="far fa-plus-square"></i>
-            </span>
-            <span class="minus-icon">
-              <i class="far fa-minus-square"></i>
-            </span>
-          </button>
-        </div>
-        <div class="question-text">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-            dolore illo dolores quia nemo doloribus quaerat, magni numquam
-            repellat reprehenderit.
-          </p>
-        </div>
-      </article><!-- End question 4 -->
+    <!-- ======== Question 4 ======== -->
+    <article class="question">
+      <div class="question-title">
+        <h2>quels justificatifs dois-je produire?</h2>
+        <button type="button" class="question-btn">
+          <span class="plus-icon">
+            <i class="far fa-plus-square"></i>
+          </span>
+          <span class="minus-icon">
+            <i class="far fa-minus-square"></i>
+          </span>
+        </button>
+      </div>
+      <div class="question-text">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+          dolore illo dolores quia nemo doloribus quaerat, magni numquam
+          repellat reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse mollitia sequi harum
+          exercitationem architecto totam a libero fugiat, expedita hic molestiae quae omnis debitis placeat repellendus
+          nostrum neque rerum adipisci.
+        </p>
+      </div>
+    </article><!-- End question 4 -->
 
-      <!-- ======== Question 5 ======== -->
-      <article class="question">
-        <div class="question-title">
-          <h2>Qui apprécie la validité des dépenses déductibles ?</h2>
-          <button type="button" class="question-btn">
-            <span class="plus-icon">
-              <i class="far fa-plus-square"></i>
-            </span>
-            <span class="minus-icon">
-              <i class="far fa-minus-square"></i>
-            </span>
-          </button>
-        </div>
-        <div class="question-text">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
-            dolore illo dolores quia nemo doloribus quaerat, magni numquam
-            repellat reprehenderit.
-          </p>
-        </div>
-      </article><!-- End question 5 -->
+    <!-- ======== Question 5 ======== -->
+    <article class="question">
+      <div class="question-title">
+        <h2>Qui apprécie la validité des dépenses déductibles ?</h2>
+        <button type="button" class="question-btn">
+          <span class="plus-icon">
+            <i class="far fa-plus-square"></i>
+          </span>
+          <span class="minus-icon">
+            <i class="far fa-minus-square"></i>
+          </span>
+        </button>
+      </div>
+      <div class="question-text">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
+          dolore illo dolores quia nemo doloribus quaerat, magni numquam
+          repellat reprehenderit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus est eveniet illo quas
+          omnis! Cupiditate quidem possimus dolor esse ipsum, dolorum a nam libero, atque incidunt corrupti laboriosam
+          facilis debitis.
+        </p>
+      </div>
+    </article><!-- End question 5 -->
 
-    </section>
-    <!-- javascript -->
+  </section>
+  <!-- javascript -->
   <script src="main.js"></script>
 </body>
 
